@@ -1,72 +1,71 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>oracle.code</groupId>
-   <version>1.0</version>
-   <artifactId>hat.root</artifactId>
-   <packaging>pom</packaging>
-   <properties>
-        <babylon.repo.name>babylon</babylon.repo.name>  <!--replace with your fork name -->
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!--Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
+DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+
+This code is free software; you can redistribute it and/or modify it
+under the terms of the GNU General Public License version 2 only, as
+published by the Free Software Foundation.  Oracle designates this
+particular file as subject to the "Classpath" exception as provided
+by Oracle in the LICENSE file that accompanied this code.
+
+This code is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+version 2 for more details (a copy is included in the LICENSE file that
+accompanied this code).
+
+You should have received a copy of the GNU General Public License version
+2 along with this work; if not, write to the Free Software Foundation,
+Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+
+Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+or visit www.oracle.com if you need additional information or have any
+questions.
+--><project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0">
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <groupId>oracle.code</groupId>
+    <artifactId>hat-root</artifactId>
+    <version>1.0</version>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>24</maven.compiler.source>
         <maven.compiler.target>24</maven.compiler.target>
-        <github.dir>${env.HOME}/github</github.dir>
-        <beehive.spirv.toolkit.dir>${github.dir}/beehive-spirv-toolkit/</beehive.spirv.toolkit.dir>
-        <babylon.dir>${github.dir}/${babylon.repo.name}</babylon.dir>
-        <hat.dir>${babylon.dir}/hat</hat.dir>
-        <hat.target>${hat.dir}/maven-build</hat.target>
-   </properties>
-
-   <profiles>
-
-       <profile>
-          <id>default</id>
-          <activation>
-             <activeByDefault>true</activeByDefault>
-          </activation>
-          <modules>
-             <module>hat</module>
-             <module>backends</module>
-             <module>examples</module>
-          </modules>
-       </profile>
-
-       <profile>
-          <id>hattricks</id>
-          <activation>
-             <file>
-                <exists>hattricks</exists>
-             </file>
-          </activation>
-          <modules>
-             <module>hat</module>
-             <module>backends</module>
-             <module>examples</module>
-             <module>hattricks</module>
-          </modules>
-       </profile>
-   </profiles>
-   <build>
-      <plugins>
-          <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-compiler-plugin</artifactId>
-             <version>3.11.0</version>
-             <configuration>
-                <compilerArgs>
-                    <arg>--enable-preview</arg>
-                    <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
-                    <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
-                </compilerArgs>
-                <source>${maven.compiler.source}</source>
-                <target>${maven.compiler.target}</target>
-                <showDeprecation>true</showDeprecation>
-                <failOnError>true</failOnError>
-                <showWarnings>true</showWarnings>
-                <showDeprecation>true</showDeprecation>
-            </configuration>
-         </plugin>
-     </plugins>
-   </build>
-
+        <hat.target>${env.PWD}/build</hat.target>
+    </properties>
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>backends</module>
+                <module>examples</module>
+                <module>hat</module>
+            </modules>
+        </profile>
+    </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.code</arg>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <showDeprecation>true</showDeprecation>
+                    <failOnError>true</failOnError>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
